--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="menu_block">
     <nav class="horizontal-nav full-width horizontalNav-notprocessed">
       <ul class="sf-menu">
-       <li class="current"><a href="index.html">About!</a></li>
+       <li class="current"><a href="index.html">About!!!</a></li>
        <li><a href="index-1.html">Services</a></li>
        <li><a href="index-2.html">Our Prices</a></li>
        <li><a href="index-3.html">Contacts</a></li>
